--- a/styles.css
+++ b/styles.css
@@ -21,16 +21,29 @@
     border-radius: 25px;
     border-color: lightgrey;
     height: 45px;
+    font-size: 20px;
 }
 
 .search {
     grid-column: 5 / 9;
     grid-row: 2 / 2;
+    border-radius: 5px;
+    border-color: white;
     font-size: 16px;
 }
 
 .lucky {
     grid-column: 9 / 15;
     grid-row: 2 / 2;
+    border-radius: 5px;
+    border-color: white;
     font-size: 16px;
+}
+
+.search:hover {
+    opacity: 0.6;
+}
+
+.lucky:hover {
+    opacity: 0.6;
 }
