Added nav-bar for index.html

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.google-img {
+#google-img {
     margin-top: 12%;
     margin-left: 38%;
     height: 15%;
@@ -15,7 +15,7 @@
     margin-right: 20%;
 }
 
-.search-bar {
+#search-bar {
     grid-column: 1 / 19;
     grid-row: 1 / 1;
     border-radius: 25px;
@@ -24,7 +24,7 @@
     font-size: 20px;
 }
 
-.search {
+#search {
     grid-column: 5 / 9;
     grid-row: 2 / 2;
     border-radius: 5px;
@@ -32,7 +32,7 @@
     font-size: 16px;
 }
 
-.lucky {
+#lucky {
     grid-column: 9 / 15;
     grid-row: 2 / 2;
     border-radius: 5px;
@@ -40,10 +40,10 @@
     font-size: 16px;
 }
 
-.search:hover {
+#search:hover {
     opacity: 0.6;
 }
 
-.lucky:hover {
+#lucky:hover {
     opacity: 0.6;
 }
