--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,25 @@
+.nav-bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    display: inline-block;
+    padding: 1%;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 #google-img {
-    margin-top: 12%;
+    margin-top: 10%;
     margin-left: 38%;
     height: 15%;
     width: 20%;
@@ -22,6 +42,8 @@
     border-color: lightgrey;
     height: 45px;
     font-size: 20px;
+    padding-left: 3%;
+    padding-right:3%;
 }
 
 #search {
